--- a/mysite/food/templates/food/detail.html
+++ b/mysite/food/templates/food/detail.html
@@ -1,4 +1,8 @@
+
+{% extends  'food/base.html' %}
+{% block body %}
 <h1>{{ item.item_name}}</h1>
 <h2>{{item.desc}}</h2>
 <h3>{{item.item_price}}</h3>
 
+{% endblock %}
