--- a/mysite/food/templates/food/detail.html
+++ b/mysite/food/templates/food/detail.html
@@ -5,12 +5,12 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-          <img height="300px" src="{{ iem.item_image}}" class="card"/>
+          <img height="300px" src="{{item.item_image}}" class="card"/>
         </div>
         <div class="col-md-6">
             
 
-<h1>{{ item.item_name}}</h1>
+<h1>{{item.item_name}}</h1>
 <h2>{{item.desc}}</h2>
 <h3>{{item.item_price}}</h3>
         </div>
