--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-dark bg-dark">
             <a href="#" class="navbar-brand">foodApp</a>
             <div class="navbar">
-              <a class="nav-item" href="#">add item</a>
+              <a class="nav-item" href="{% url 'food:create_item'}">add item</a>
               <a class="nav-item" href="#">delete  </a>
               <a class="nav-item" href="#">view item</a>
             </div>
