--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -27,7 +27,9 @@
           </nav>
           {% if  messages %}
           {% for message in messages %}
-          {{ messages}}
+          <div class="alert alert-{{message.tags}}">{{ message }}</div>
+
+        
           {% endfor %}
           {% endif %}
         <script src="" async defer></script>
