--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -21,8 +21,12 @@
             <a href="#" class="navbar-brand">foodApp</a>
             <div class="navbar">
               <a class="nav-item" href="{% url 'food:create_item'}">add item</a>
-              <a class="nav-item" href="#">delete  </a>
+              <a class="nav-item" href="#">delete </a>
               <a class="nav-item" href="#">view item</a>
+              {% if user.is_authenticated %}
+              <a href=" {% url 'logout' %}">logout</a>
+              {% else %}
+              <a href="{% url 'login' %}">login </a>
             </div>
           </nav>
           {% if  messages %}
