--- a/mysite/food/templates/food/base.html
+++ b/mysite/food/templates/food/base.html
@@ -25,6 +25,7 @@
               <a class="nav-item" href="#">view item</a>
               {% if user.is_authenticated %}
               <a href=" {% url 'logout' %}">logout</a>
+              <a href={% url 'profile' %}>profile</a>
               {% else %}
               <a href="{% url 'login' %}">login </a>
             </div>
